# ChangeLog for sec-policy/selinux-base-policy
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sec-policy/selinux-base-policy/ChangeLog,v 1.99 2012/03/31 12:56:49 swift Exp $

  31 Mar 2012; <swift@gentoo.org> selinux-base-policy-2.20110726-r13.ebuild:
  Stabilizing

*selinux-base-policy-2.20120215-r6 (31 Mar 2012)

  31 Mar 2012; <swift@gentoo.org> +selinux-base-policy-2.20120215-r6.ebuild:
  Bumping to 2.20120215 policies

  23 Feb 2012; <swift@gentoo.org> selinux-base-policy-2.20110726-r11.ebuild:
  Stabilizing

*selinux-base-policy-2.20110726-r13 (23 Feb 2012)

  23 Feb 2012; <swift@gentoo.org> +selinux-base-policy-2.20110726-r13.ebuild:
  Adding revision 13

  29 Jan 2012;  <swift@gentoo.org> Manifest:
  Updating manifest

  29 Jan 2012; <swift@gentoo.org> selinux-base-policy-2.20110726-r8.ebuild:
  Stabilize r8 series

*selinux-base-policy-2.20110726-r11 (14 Jan 2012)

  14 Jan 2012; <swift@gentoo.org> +selinux-base-policy-2.20110726-r11.ebuild:
  Bumping to rev 11

  19 Dec 2011; <swift@gentoo.org> selinux-base-policy-2.20110726-r6.ebuild:
  Stabilize rev6

*selinux-base-policy-2.20110726-r8 (17 Dec 2011)

  17 Dec 2011; <swift@gentoo.org> +selinux-base-policy-2.20110726-r8.ebuild:
  Bumping to rev8, list of changes available at
  http://archives.gentoo.org/gentoo-hardened/msg_b11ef32142076034abd0616e373361
  da.xml

*selinux-base-policy-2.20110726-r7 (04 Dec 2011)

  04 Dec 2011; <swift@gentoo.org> +selinux-base-policy-2.20110726-r7.ebuild:
  Bumping to rev 7

  27 Nov 2011; <swift@gentoo.org> selinux-base-policy-2.20110726-r4.ebuild,
  selinux-base-policy-2.20110726-r5.ebuild,
  selinux-base-policy-2.20110726-r6.ebuild, files/modules.conf:
  Put XDG selection (for base) in modules.conf instead of ebuild hocus-pocus

  27 Nov 2011; <swift@gentoo.org> selinux-base-policy-2.20110726-r5.ebuild:
  Stable on x86/amd64

*selinux-base-policy-2.20110726-r6 (15 Nov 2011)
