@@ -1,6 +1,10 @@
 # ChangeLog for sec-policy/selinux-base-policy
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sec-policy/selinux-base-policy/ChangeLog,v 1.99 2012/03/31 12:56:49 swift Exp $
+# $Header: /var/cvsroot/gentoo-x86/sec-policy/selinux-base-policy/ChangeLog,v 1.100 2012/04/01 05:23:33 mr_bones_ Exp $
+
+  01 Apr 2012; Michael Sterrett <mr_bones_@gentoo.org>
+  selinux-base-policy-2.20120215-r6.ebuild:
+  inherit goes near the top
 
   31 Mar 2012; <swift@gentoo.org> selinux-base-policy-2.20110726-r13.ebuild:
   Stabilizing
